--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,11 @@
 			<version>5.3.7.Final</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
