--- a/pom.xml
+++ b/pom.xml
@@ -73,10 +73,7 @@
 			<version>5.3.7.Final</version>
 		</dependency>
 
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-devtools</artifactId>
-		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -100,6 +97,13 @@
 			<!--<artifactId>spring-security-config</artifactId>-->
 			<!--<version>3.2.4.RELEASE</version>-->
 		<!--</dependency>-->
+		<!-- https://mvnrepository.com/artifact/javax.mail/mail -->
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
